# podcast-use

./: .env.example  .gitignore  LICENSE  README.md  README.zh-TW.md  SKILL.md  pyproject.toml
helpers/: build_subtitles.py  generate_gemini_image.py  generate_image.py  init_deliverables.py  init_glossary.py  init_reels_plan.py  pack_transcripts.py  refine_srt_groq.py  render_audio.py  render_reels.py  render_youtube_video.py  transcribe_groq.py
prompts/: install_claude_code_en.txt  install_claude_code_zh-TW.txt  install_codex_en.txt  install_codex_zh-TW.txt
scripts/: install_skill.sh
